# ai-workflow-assistant

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  Dockerfile  PROJECT_RULES.md  README.md  TASKS.md  alembic.ini  compose.yaml  for_me.md  pyproject.toml  railway.json
.github/workflows/: ci.yml
.obsidian/: workspace.json
alembic/: env.py
alembic/versions/: 0b033df982b3_feat_add_step_type_to_workflow_steps.py  1786f56b6af4_feat_create_workflow_runs_table.py  696812c633f7_add_telegram_id_to_user.py  aed106ca2cce_feat_add_telegram_id_to_users.py  (+3 more)
docs/: 01_PRD.md  02_System_Design.md  03_Database_Design.md  04_API_Specification.md  05_Development_Roadmap.md
prompts/: API-001_Health_Endpoint.md  API-002 - Перевод User API на Service Layer.md  DB-001_Database_Foundation.md  DB-002_Alembic_Setup.md  DB-004 - Add Telegram ID to User model.md  DB-005.md  DB-006.md  DI-001 - Dependency Injection Foundation.md  ENGINE-001.md  ENGINE-002.md  ENGINE-003.md  ENGINE-004.md  ENGINE-005.md  ENGINE-006.md  ENGINE-007.md  ENGINE-008.md  ENGINE-009.md  ENGINE-010.md  ENV-001_Docker_PostgreSQL.md  ENV-002_Run_Development_Environment.md  FEATURE-001.md  FEATURE-002.md  FEATURE-003.md  FEATURE-004.md  FEATURE-005.md  FEATURE-006.md  FEATURE-007.md  FEATURE-008.md  LLM-001.md  LLM-002.md  LLM-003.md  MODEL-001.md  MODEL-002.md  PROMPT-001.md  REP-001 - Repository Layer Foundation.md  REP-002 - Implement UserRepository CRUD.md  REP-003.md  REP-004.md  REP-005.md  SCHEMA-001 - Synchronize User Schemas.md  (+17 more)
scripts/: seed_demo.py
src/: main.py
tests/: conftest.py
(+52 files in other folders)
