[project]
name = "ai-workflow-assistant"
version = "0.1.0"
description = "AI Workflow Assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "openai>=2.44.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.3.5",
    "black>=24.3.0",
    "pytest-asyncio>=1.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
asyncio_mode = "auto"
